@@ -34,17 +34,17 @@
 	</rectitle>
 
 	<progressbar>
-		<area condition="not{timeshift}" x="7%" y="87%" width="86%" height="3%" layer="3">
+		<area condition="not{timeshift}" x="9%" y="87%" width="82%" height="3%" layer="3">
 			<drawimage x="0" y="0" width="{current}/{total}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayProgress" />
 		</area>
-		<area condition="{timeshift}" x="7%" y="87%" width="86%" height="3%" layer="3">
+		<area condition="{timeshift}" x="9%" y="87%" width="82%" height="3%" layer="3">
 			<drawimage x="0" y="0" width="{total}/{timeshifttotal}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayTimeshift" />
 			<drawimage x="0" y="0" width="{current}/{timeshifttotal}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayProgress" />
 		</area>
 	</progressbar>
 
 	<cutmarks>
-		<area condition="not{timeshift}" x="7%" y="87%" width="86%" height="3%" layer="4">
+		<area condition="not{timeshift}" x="9%" y="87%" width="82%" height="3%" layer="4">
 			<loop name="marks" x="0" y="0" orientation="absolute">
 				<!-- draw mark -->
 				<drawrectangle condition="not{marks[active]}" x="{marks[position]}/{marks[total]}*{areawidth}" y="0" width="1" height="100%" color="{clrBlack}" />
@@ -55,7 +55,7 @@
 			</loop>
 		</area>
 
-		<area condition="{timeshift}" x="7%" y="87%" width="85%" height="3%" layer="4">
+		<area condition="{timeshift}" x="9%" y="87%" width="82%" height="3%" layer="4">
 			<loop name="marks" x="0" y="0" orientation="absolute">
 				<!-- draw mark -->
 				<drawrectangle condition="not{marks[active]}" x="{marks[position]}/{marks[timeshifttotal]}*{areawidth}" y="0" width="1" height="100%" color="{clrBlack}" />
@@ -68,7 +68,7 @@
 	</cutmarks>
 	
 	<currenttime>
-		<area x="0" y="86%" width="6%" height="5%" layer="3">
+		<area x="0" y="86%" width="8%" height="5%" layer="3">
 			<drawtext x="0" y="12%" align="right" font="{light}" fontsize="75%" color="{clrLightGray}" text="{reccurrent}" />
 		</area>
 	</currenttime>
@@ -118,10 +118,10 @@
 	</endtime>
 
 	<totaltime>
-		<area x="93%" y="86%" width="6%" height="5%" layer="3">
+		<area x="91%" y="86%" width="6%" height="5%" layer="3">
 			<drawtext y="12%" align="right" font="{light}" fontsize="75%" color="{clrLightGray}" text="{rectotal}" />
 		</area>
-		<area condition="{timeshift}++{showTimeshiftTotal}" x="82%" y="86%" width="11%" height="5%" layer="4">
+		<area condition="{timeshift}++{showTimeshiftTotal}" x="80%" y="86%" width="11%" height="5%" layer="4">
 			<drawtext align="right" valign="center" font="{light}" fontsize="60%" color="{clrWhite}" text="total: {timeshifttotal}h" />
 		</area>
 	</totaltime>
